--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-
+#this allows for sequential id generation in entities
+spring.jpa.properties.hibernate.id.new_generator_mappings=true
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
