--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
+app.id=6cd083ea34ca3da3df07f2fb02689ba8
+
