Add CRON scheduler and PrivateLogger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-app.id=6cd083ea34ca3da3df07f2fb02689ba8
+cron.expression=0 */2 * ? * *
+scheduler.expression=0 */2 * ? * *
 
